--- a/app/src/main/res/layout/fragment_games_list.xml
+++ b/app/src/main/res/layout/fragment_games_list.xml
@@ -24,11 +24,13 @@
         android:id="@+id/games_list"
         android:layout_width="match_parent"
         android:layout_marginHorizontal="12dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintVertical_weight="1"
         android:layout_marginTop="12dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:itemCount="4"
         tools:listitem="@layout/game_item"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
