--- a/app/src/main/res/layout/game_item.xml
+++ b/app/src/main/res/layout/game_item.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp">
+    android:layout_marginBottom="32dp"
+    android:background="@color/item_background">
 
     <TextView
         android:id="@+id/name"
@@ -17,17 +18,28 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
+        android:id="@+id/released_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Released: "
+        android:textSize="16sp"
+        android:layout_marginTop="8dp"
+        android:textColor="@color/white"
+        android:layout_marginStart="8dp"
+        app:layout_constraintTop_toBottomOf="@id/name"
+        app:layout_constraintStart_toStartOf="@id/name" />
+
+    <TextView
         android:id="@+id/released"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="released"
-        android:layout_marginTop="8dp"
         android:textSize="12sp"
         android:textStyle="italic"
         android:textColor="@color/light_grey"
-        android:layout_marginStart="8dp"
-        app:layout_constraintTop_toBottomOf="@id/name"
-        app:layout_constraintStart_toStartOf="@id/name"/>
+        android:layout_marginStart="4dp"
+        app:layout_constraintStart_toEndOf="@id/released_text"
+        app:layout_constraintBottom_toBottomOf="@id/released_text"/>
 
     <ImageView
         android:id="@+id/background_image"
@@ -41,21 +53,44 @@
         android:contentDescription="game_img" />
 
     <TextView
+        android:id="@+id/rating_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="User's rating: "
+        android:textSize="16sp"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toStartOf="@id/rating"
+        app:layout_constraintBottom_toBottomOf="@id/rating"
+        android:layout_marginEnd="4dp"/>
+
+    <TextView
         android:id="@+id/rating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="rating"
         android:textColor="@color/yellow"
         android:layout_marginEnd="4dp"
-        app:layout_constraintTop_toTopOf="@id/name"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@id/name"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/metacritic_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Metacritic: "
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:layout_marginEnd="4dp"
+        app:layout_constraintTop_toTopOf="@id/metacritic"
+        app:layout_constraintEnd_toStartOf="@id/metacritic"/>
 
     <TextView
         android:id="@+id/metacritic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="metacritic"
-        android:textColor="@color/white"
+        android:textColor="@color/light_grey"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/rating"
         app:layout_constraintEnd_toEndOf="@id/rating"/>
